--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
-  "require-dev" : {
-    "phpunit/phpunit": "4.2.*"
-  }
+    "name": "Bohdan/php-assessment",
+    "authors": [
+        {
+            "name": "shloserb",
+            "email": "shloserb@gmail.com"
+        }
+    ],
+    "require": {
+		"phpunit/phpunit": "4.2.*"
+    }
 }
