--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
   "require-dev" : {
+    "phpunit/php-code-coverage": "3.0.*@dev"
+  },
+  "require-dev" : {
     "phpunit/phpunit": "4.2.*"
   }
 }
