--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-  "require-dev" : {
-    "phpunit/phpunit": "4.2.*"
-  }
+    "require-dev": {
+        "phpunit/phpunit": "^10.5",
+        "phpunit/php-code-coverage": "^10.1"
+    }
 }
