--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,18 @@
 {
-  "require-dev" : {
-    "phpunit/phpunit": "4.2.*"
+  "autoload": {
+      "psr-4": {
+          "config\\": "config/",
+          "interview\\": "core/",
+          "model\\": "model/"
+      }
+  },
+  "autoload-dev": {
+      "psr-4": {
+          "Tests\\": "tests/"
+      }
+  },
+  "require-dev": {
+      "phpunit/phpunit": "^8.5"
   }
 }
+
